# simple_mmd_renderer

./: CMakeLists.txt  README.md  main.cpp
shader/: ground.glsl  ibl.glsl  main.glsl  shadow.glsl  taa.glsl
